# lumiax-controller

./: CMakeLists.txt  generate_font.py  prj.conf
boards/arm/controller/: Kconfig.board  Kconfig.defconfig  board.cmake  controller-pinctrl.dtsi  controller.dts  controller.yaml  controller_defconfig
boards/arm/controller/dts/bindings/: barrot_serial.yaml
scripts/: aaa.py  image.py  onoff.py  status.py  tlay2_client.py  tlay2_dbgout.py  tlay2_server.py
src/: bt.c  bt.h  display.cpp  display.hpp  fifo.hpp  font.c  font.h  main.cpp  main_modules.hpp  printt.h  tlay2.hpp  uart.cpp  uart.hpp
